fix similar locations error, overlap panel unless large display

--- a/src/css/organisms/scatterplot.css
+++ b/src/css/organisms/scatterplot.css
@@ -66,7 +66,13 @@
 
   /** Mobile view, make room for search bar */
   .charts__root.charts__root--split .scatterplot__heading {
-    right: 300px;
+    right: 0px;
+  }
+
+  @media(min-width: 650px) {
+    .charts__root.charts__root--split .scatterplot__heading {
+      right: 300px;
+    }
   }
 
   /** Larger resolutions have side by side charts, extend heading */
